# parsec-tutorial

./: README.md  parsec-tutorial.cabal  spec.txt
.github/workflows/: haskell.yml
src/Tutorial/: BasicParsers.hs  Calculator.hs  JSON.hs
test/: BasicParsersSpec.hs  CalculatorSpec.hs  JSONSpec.hs
