name:                parsec-tutorial
version:             0.1.0.0
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Tutorial.BasicParsers
                    , Tutorial.Calculator
                    , Tutorial.JSON
  build-depends:       base >= 4.7 && < 5
                    , parsec
                    , containers
                    , text
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite parsec-tutorial-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       BasicParsersSpec
                    , CalculatorSpec
                    , JSONSpec
  build-depends:       base
                    , parsec-tutorial
                    , hspec >= 2.0.0
                    , hspec-discover >= 2.0.0
                    , parsec
                    , containers
                    , text
  ghc-options:         -Wall
  default-language:    Haskell2010
